# machine_tending_robot

./: .gitignore  IO_write.py  README.md  arduino_test.py  relay_test.py
arduino_leonardo_code/StandardFirmataPlus_mod/: StandardFirmataPlus_mod.ino
arduino_leonardo_code/read_io2_and_3/: read_io2_and_3.ino
cycle_start/: cycle_start.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros2_kortex_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_kortex_ws/install/controller_manager/test/: test_controller_overriding_parameters.yaml  test_controller_spawner_wildcard_entries.yaml  test_controller_spawner_with_basic_controllers.yaml  test_controller_spawner_with_interfaces.yaml  test_controller_spawner_with_type.yaml  test_ros2_control_node.yaml
ros2_kortex_ws/log/: latest_build
ros2_kortex_ws/src/gz_ros2_control/: .pre-commit-config.yaml  README.md
ros2_kortex_ws/src/gz_ros2_control/doc/: index.rst
ros2_kortex_ws/src/hello_moveit/: package.xml
ros2_kortex_ws/src/machine_tending/: CMakeLists.txt  package.xml  setup.py
ros2_kortex_ws/src/machine_tending/launch/: machine_tending.launch.py
ros2_kortex_ws/src/machine_tending/machine_tending/: arduino_interface.py  relay_interface.py
ros2_kortex_ws/src/machine_tending/src/: machine_tending_node.cpp
ros2_kortex_ws/src/moveit_visual_tools/: CHANGELOG.rst  package.xml
ros2_kortex_ws/src/mtc_tutorial/: CMakeLists.txt  package.xml
ros2_kortex_ws/src/ros_gz/: README.md
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
sainsmart-relay/: README.md  setup.py
sainsmart-relay/sainsmart_relay/: daemon.py  server.py  subscribe_to_status.py
sainsmart-relay/tests/: test_relay.py
tormach_mcodes/: M101  M102
workspace/ros2_kortex_ws/install/: local_setup.sh  setup.sh
workspace/ros2_kortex_ws/log/: latest_build
(+3593 files in other folders)
